refinement[TW23264]: Pub - Remove Client Side Template Manager
Change-Id: I04a99791264a8dc28ee415449fd4ed0adf1faf5f